Reduce .product .caption font size to prevent wrapping on the homepage.

--- a/web-root/sass/app.sass
+++ b/web-root/sass/app.sass
@@ -269,7 +269,7 @@ header .logo
 	text-align: center
 	padding: $small-spacing
 	width: 100%
-	font-size: 1.2rem
+	font-size: 1.1rem
 
 
 /* Alignment
